# threes_game

./: .gitignore  Cargo.toml  README  config.json  gen_data_for_phone.py  play_demo.py  reproduce_bug.py  surgery.py  test_steps_before_die_random.py  threes.ipynb  threes_env_check_visual.py  threes_env_test.py  threes_env_test_stress.py  threes_gym.py  threes_maskable_ppo_train.py  threes_play.py  train_expert_iteration.py  train_kaggle.py
src/: adaptive_manager.rs  deck_tracker.rs  game.rs  hotload_config.rs  lib.rs  main.rs  n_tuple_network.rs  pbt.rs  potential_calculate.rs  python_module.rs  rarity.rs  threes_const.rs  threes_env.rs  tile.rs  ui.rs
training_data/: temp_worker_0.txt  temp_worker_1.txt  temp_worker_2.txt  temp_worker_3.txt  temp_worker_4.txt  temp_worker_5.txt  temp_worker_6.txt  temp_worker_7.txt
