[package]
name = "threes_game"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "threes_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.2"
crossterm = "0.29.0"
log = "0.4.29"
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rayon = "1.11.0"

[dev-dependencies]
